--- a/style.css
+++ b/style.css
@@ -304,6 +304,48 @@ header .container {
   max-height: 370px;
 }
 
+.FAQs_container {
+  padding-block: 90px;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.FAQs_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+  width: 100%;
+  max-width: 900px;
+}
+
+.FAQs_card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.FAQs_card .fa-plus {
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.FAQs_wrapper .question {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+}
+
+.FAQs_wrapper .answer {
+  display: none;
+}
+
+.FAQs_wrapper .answer.open {
+  display: block;
+}
+
 .review_container {
   background-image: url(assets/review_background.jpg);
   background-repeat: no-repeat;
@@ -772,7 +814,7 @@ footer .container {
   .creations_container,
   .about_container,
   .service_container,
-  .shop_container, .contact_form_container, .started_container {
+  .shop_container, .contact_form_container, .started_container, .FAQs_container{
     padding-block: 50px;
   }
 
